AA-2002-11-14-0  Kerberos:  changes to fix build problems with krb5

CR-2002-11-07-0  Testsuite: sort checktree directory path list before starting
                            test run to get an alphabetic test run order.

SD-2002-10-17-0  Bugfix:    SGEEE - Fixed bug in the pending functional
                            ticket calculation which incorrectly
                            calculated the number of functional tickets
                            for some pending jobs.
                 Changed:   sge_schedd

SD-2002-10-15-0  Bugfix:    Fix no newline problem with path alias file If
                            the last line in the path aliases file
                            (sge_aliases) did not have a new line, qsub
                            would core.
                 IZ:        398
                 Changed:   qsub, qsh, qmon, ...

AH-2002-10-10-0  Bugfix:    Fix problem with user .cshrc error causing
                            [pro|epi]log,pe-[start|stop] failure and setting
                            queue into error state.
                            [pro|epi]log,pe-[start|stop] are now started
                            with "unix_behavior" i.e plain execvp().  This
                            allows admins to prevent .cshrc/.profile from
                            being sourced when #!/bin/csh -f or #!/bin/sh -f
                            is used.
                 IZ:        391
                 Bugtraq:   4756556
                 Review:    AS
                 Changed    sge_shepherd

AH-2002-10-08-0  Bugfix:    Commd read the host alias file each time when 
                            a hostname was not found in commd's host list.
                            Now host alias file only read at commd startup
                            or when a COMMD_UNIQUEHOST request with
                            refresh_aliases = true is received. 
                 Review:    AS
                 Changed:   sge_commd
