@@ -1,3 +1,12 @@
+EB-2002-11-14-0  Bugfix:    - memopy leak in execd
+                            - stepsize 0 in array job specification
+                              results in qmaster exception
+                            - job env variables SGE_TASK_* might be
+                              overwritten by qsub -v
+                 IZ:        423, 424, 402, 264
+                 Bugtraq:   4778757, 4778758, 4778762
+                 Review:    JG
+
 AA-2002-11-14-0  Kerberos:  changes to fix build problems with krb5
 
 CR-2002-11-07-0  Testsuite: sort checktree directory path list before starting
@@ -85,7 +94,7 @@ JG-2002-09-26-0  Testsuite: Introduce architectures aix51 and hp11-64 for
 
 EB-2002-09-25-0  Bugfix:    Exiting sgeee jobs will be shown in qmons dialog 
                             for pending jobs.
-                 IZ:        has no id until now (IZ does not work)
+                 IZ:        388 
                  Changed:   qmon
 
 CR-2002-09-24-1  Bugfix:    linux clients use port 65535 by error if
